// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`SorSearch component should render contracts with sor code that has been searched in descending date order 1`] = `
<DocumentFragment>
  <div>
    <section
      class="section"
    >
      <h3
        class="lbh-heading-h3"
      >
        Check an SOR code
      </h3>
      <div
        class="govuk-form-group lbh-form-group"
      >
        <form>
          <label
            class="govuk-label lbh-label"
            for="input-search"
          >
            Find out which Sycous Limited contracts an SOR code exists in
          </label>
          <input
            class="govuk-input lbh-input govuk-input--width-10"
            data-testid="input-search"
            id="input-search"
            name="search-name"
            type="text"
            value="ABC123"
          />
          <div
            class="govuk-form-group lbh-form-group"
          >
            <button
              class="govuk-button lbh-button"
              data-module="govuk-button"
              data-testid="submit-search"
              id="submit-search"
              type="submit"
            >
              Search
            </button>
          </div>
        </form>
      </div>
    </section>
    <h3
      class="lbh-heading-h3 lbh-!-font-weight-bold govuk-!-margin-bottom-1"
    >
      ABC123 found in the following Sycous Limited contracts
    </h3>
    <ol
      data-test-id="contract-list"
      style="display: grid; grid-template-columns: repeat(auto-fill, 10rem); gap: 1rem; list-style: none; padding: 0px; margin: 0px;"
    >
      <li
        data-id="0"
        style="border: 5px solid #00664f; border-radius: 20px; box-sizing: border-box; padding: 1rem; display: flex; margin-top: 1rem; justify-content: center;"
      >
        <div
          class="contract-details"
        >
          <h5
            style="white-space: nowrap;"
          >
            132-132-1322
          </h5>
          <p
            style="color: green;"
          >
            Active
          </p>
        </div>
      </li>
      <li
        data-id="1"
        style="border: 5px solid #00664f; border-radius: 20px; box-sizing: border-box; padding: 1rem; display: flex; margin-top: 1rem; justify-content: center;"
      >
        <div
          class="contract-details"
        >
          <h5
            style="white-space: nowrap;"
          >
            155-155-1555
          </h5>
          <p
            style="color: red;"
          >
            Expired: 11 May 2025
          </p>
        </div>
      </li>
    </ol>
  </div>
</DocumentFragment>
`;

exports[`SorSearch component should render no contracts found 1`] = `
<DocumentFragment>
  <div>
    <section
      class="section"
    >
      <h3
        class="lbh-heading-h3"
      >
        Check an SOR code
      </h3>
      <div
        class="govuk-form-group lbh-form-group"
      >
        <form>
          <label
            class="govuk-label lbh-label"
            for="input-search"
          >
            Find out which Sycous Limited contracts an SOR code exists in
          </label>
          <input
            class="govuk-input lbh-input govuk-input--width-10"
            data-testid="input-search"
            id="input-search"
            name="search-name"
            type="text"
            value="12"
          />
          <div
            class="govuk-form-group lbh-form-group"
          >
            <button
              class="govuk-button lbh-button"
              data-module="govuk-button"
              data-testid="submit-search"
              id="submit-search"
              type="submit"
            >
              Search
            </button>
          </div>
        </form>
      </div>
    </section>
    <div
      style="width: 90%;"
    >
      <div
        class="warning-info-box govuk-inset-text lbh-inset-text"
        data-testid="no-contracts-found"
      >
        <div
          class="lbh-warning-text govuk-warning-text"
        >
          <span
            aria-hidden="true"
            class="govuk-warning-text__icon"
          >
            !
          </span>
          <div
            class="govuk-warning-text__text"
          >
            <span
              class="govuk-warning-text__assistive"
            >
              Warning
            </span>
            <p
              class="govuk-!-margin-top-0 lbh-body-s lbh-!-font-weight-bold"
            >
              No contracts found!
            </p>
            <p
              class="lbh-body-xs govuk-!-margin-top-1"
            />
            <p
              class="lbh-body"
            >
              No contracts with 
              <span
                style="font-weight: 600;"
              >
                12
              </span>
               SOR code
            </p>
            <p />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SorSearch component should render search bar and title when nothing has been searched 1`] = `
<DocumentFragment>
  <div>
    <section
      class="section"
    >
      <h3
        class="lbh-heading-h3"
      >
        Check an SOR code
      </h3>
      <div
        class="govuk-form-group lbh-form-group"
      >
        <form>
          <label
            class="govuk-label lbh-label"
            for="input-search"
          >
            Find out which Sycous Limited contracts an SOR code exists in
          </label>
          <input
            class="govuk-input lbh-input govuk-input--width-10"
            data-testid="input-search"
            id="input-search"
            name="search-name"
            type="text"
            value=""
          />
          <div
            class="govuk-form-group lbh-form-group"
          >
            <button
              class="govuk-button lbh-button"
              data-module="govuk-button"
              data-testid="submit-search"
              disabled=""
              id="submit-search"
              type="submit"
            >
              Search
            </button>
          </div>
        </form>
      </div>
    </section>
  </div>
</DocumentFragment>
`;
